<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
     <Button
         android:id="@+id/butn_rodio"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:text="@string/app_radio"/>
     <Button
         android:id="@+id/butn_xing"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:text="@string/app_xing"/>
     <Button
         android:id="@+id/butn_bi"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:text="@string/app_bi"/>
     <Button
         android:id="@+id/butn_jian"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:text="@string/app_jian"/>

  </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
      <Button
          android:id="@+id/butn_cipan"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content"
          android:text="@string/app_cipan"/>
      <Button
          android:id="@+id/butn_jia"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content"
          android:text="@string/app_jia"/>
      <Button
          android:id="@+id/butn_zai"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content"
          android:text="@string/app_ting"/>
      <Button
          android:id="@+id/butn_pei"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content"
          android:text="@string/app_okhttp"/>
   </LinearLayout>
   <com.facebook.drawee.view.SimpleDraweeView
       android:id="@+id/shop_icon"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:failureImage="@mipmap/ic_03"
       app:viewAspectRatio="1.0"
       app:placeholderImage="@mipmap/ic_04"/>
</LinearLayout>